# awaaz_platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci-agent.yml  ci-api.yml  ci-dashboard.yml  deploy.yml  eval-suite.yml  security.yml
apps/agent/: Dockerfile  Dockerfile.gpu  pyproject.toml  requirements-ci.txt
apps/agent/awaaz_agent/: __init__.py  agent.py  flow.py  main.py  observability.py  settings.py
apps/agent/awaaz_agent/telephony/: __init__.py  amd.py  compliance.py  sip_outbound.py
apps/agent/awaaz_agent/tests/: test_amd.py  test_compliance.py  test_flow.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/awaaz_api/: __init__.py  deps.py  main.py  settings.py
apps/api/awaaz_api/channels/: __init__.py  base.py  dialog360.py  dispatch.py  factory.py  meta_cloud.py  twilio_wa.py
apps/api/awaaz_api/fsm/: __init__.py  engine.py  states.py  tools.py
apps/api/awaaz_api/fsm/prompts/: closing.md  confirm_intent.md  disclosure.md  greeting.md  identity_verify.md  language_fallback.md  order_recap.md  out_of_scope.md  proxy_answerer.md  system_ur.md  voicemail.md  wrong_number.md
apps/api/awaaz_api/integrations/: __init__.py  stt_router.py
apps/api/awaaz_api/language/: __init__.py  detect.py  normalize.py
apps/api/awaaz_api/llm/: __init__.py  anthropic.py  base.py  factory.py  openai_compat.py
apps/api/awaaz_api/middleware/: __init__.py  pii_redact.py  ratelimit.py  request_context.py  tenant.py
apps/api/awaaz_api/migrations/: env.py  script.py.mako
apps/api/awaaz_api/migrations/versions/: 20260428_0001_initial_schema.py
apps/api/awaaz_api/observability/: __init__.py  langfuse_client.py  logging.py  metrics.py  otel.py
apps/api/awaaz_api/persistence/: __init__.py  db.py  encryption.py
apps/api/awaaz_api/routers/: __init__.py  agents.py  analytics.py  auth.py  conversations.py  csv_upload.py  health.py  messages.py  orders.py  orgs.py  sms.py  stores.py  transcripts.py  webhooks_dialog360.py  webhooks_generic.py  webhooks_meta_wa.py  webhooks_shopify.py  webhooks_stripe.py  webhooks_twilio_voice.py  webhooks_twilio_wa.py  webhooks_woocommerce.py
apps/api/awaaz_api/schemas/: __init__.py  common.py  conversation.py  order.py
apps/api/awaaz_api/scripts/: eval_diff.py  make_test_conversation.py  run_eval_suite.py  seed_dev.py
apps/api/awaaz_api/services/: __init__.py  dispatch.py  intake.py  signing.py
apps/api/awaaz_api/tests/: conftest.py  test_amd.py  test_compliance.py  test_csv_intake.py  test_fsm.py  test_language.py  test_meta_wa_parsing.py  test_phone_normalisation.py  test_signing.py
apps/api/awaaz_api/tests/fixtures/golden/: 01_confirm_cooperative.json  02_cancel_real_reason.json  03_reschedule_specific.json
apps/api/awaaz_api/workers/: __init__.py  analytics_rollup.py  billing_rollup.py  gdpr_worker.py  retry_worker.py  run_all.py  wa_event_worker.py
apps/api/tests/eval/: baseline.json
apps/dashboard/: .eslintrc.cjs  .prettierrc.json  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/dashboard/app/(auth)/sign-in/: page.tsx
apps/dashboard/app/(auth)/sign-up/: page.tsx
apps/dashboard/app/(dashboard)/: layout.tsx
apps/dashboard/app/(dashboard)/dashboard/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/analytics/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/audit/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/billing/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/calls/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/conversations/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/integrations/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/orders/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/stores/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/stores/new/: page.tsx
apps/dashboard/app/(dashboard)/dashboard/team/: page.tsx
apps/dashboard/app/(dashboard)/onboarding/: page.tsx
apps/dashboard/app/api/stores/: route.ts
apps/dashboard/components/: card.tsx  sign-out-button.tsx
apps/dashboard/lib/: api-client.ts  auth-client.ts  auth.ts  session.ts  utils.ts
apps/shopify-app/: package.json  shopify.app.toml
apps/shopify-app/app/: shopify.server.ts
apps/shopify-app/app/routes/: webhooks.orders.create.tsx
apps/woocommerce-plugin/: readme.txt  voice-ai-cod.php
apps/woocommerce-plugin/includes/: class-vai-api.php  class-vai-order-meta.php  class-vai-plugin.php  class-vai-settings.php  class-vai-webhook.php
docs/: ARCHITECTURE.md  COMPLIANCE.md  COSTS.md  DEPLOYMENT.md  ROADMAP.md  SPEC.md  STATUS.md
infra/grafana/dashboards/: awaaz-fleet.json  dashboards.yaml
infra/livekit/: livekit.yaml  sip.yaml
infra/nginx/: awaaz.conf
infra/otel-collector/: otel.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
